--- a/example/demo.html
+++ b/example/demo.html
@@ -53,6 +53,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <core-item label="Drop Down" tag="core-dropdown" url="core_dropdown.html"></core-item>
 
+    <core-item label="Drop Down" tag="core-dropdown-menu" url="core_dropdown_menu.html"></core-item>
+
     <core-item label="Field" tag="core-field" url="core_field.html"></core-item>
 
     <core-item label="Icon" tag="core-icon" url="core_icon.html"></core-item>
@@ -72,8 +74,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <core-item label="Overlay" tag="core-overlay" url="core_overlay.html"></core-item>
 
     <core-item label="Pages" tag="core-pages" url="core_pages.html"></core-item>
-
-    <core-item label="Popup Menu" tag="core-popup-menu" url="core_popup_menu.html"></core-item>
 
     <core-item label="Range" tag="core-range" url="core_range.html"></core-item>
 
