update entry points

--- a/example/demo.html
+++ b/example/demo.html
@@ -53,7 +53,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <core-item label="Drop Down" tag="core-dropdown" url="core_dropdown.html"></core-item>
 
-    <core-item label="Drop Down" tag="core-dropdown-menu" url="core_dropdown_menu.html"></core-item>
+    <core-item label="Dropdown Menu" tag="core-dropdown-menu" url="core_dropdown_menu.html"></core-item>
 
     <core-item label="Field" tag="core-field" url="core_field.html"></core-item>
 
