Update core elements with latest polymer and web_components: include interop support automatically, remove it from tests and examples.

--- a/example/core_icon.html
+++ b/example/core_icon.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <head>
   <title>core-icon</title>
 
-  <script src="packages/web_components/dart_support.js"></script>
+
   <link rel="import" href="packages/core_elements/core_icons.html">
   <link rel="import" href="packages/core_elements/core_icon.html">
 
@@ -45,16 +45,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   import 'dart:html';
   import 'package:polymer/polymer.dart';
 
-  main() {
-    initPolymer();
-
+  main() => initPolymer().run(() {
     Polymer.onReady.then((_) {
       var template = document.querySelector('#myTemplate');
       // It looks like I have to assign a model to the template, which is not
       // consistent with the JS side?
       template.model = template;
     });
-  }
+  });
 </script>
 </body>
 </html>
