--- a/test/core_menu_button_test.html
+++ b/test/core_menu_button_test.html
@@ -12,14 +12,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <title>core-menu-button</title>
 
     <script src="packages/unittest/test_controller.js"></script>
-    <script src="packages/web_components/dart_support.js"></script>
+
 
     <link rel="import" href="packages/core_elements/core_menu_button.html">
     <link rel="import" href="packages/core_elements/core_item.html">
 
     <script type="application/dart" src="core_menu_button_test.dart"></script>
   </head>
-  <body>
+  <body unresolved>
 
     <!-- overlay should be removed when button is removed while opened -->
     <template id="removeOpenedOverlay" is="auto-binding-dart">
