--- a/test/core_selector_basic_test.html
+++ b/test/core_selector_basic_test.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <title>core-selector-basic</title>
 
     <script src="packages/unittest/test_controller.js"></script>
-    <script src='packages/web_components/dart_support.js'></script>
+
 
     <link rel='import' href='packages/core_elements/core_selector.html'>
 
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <script type='application/dart' src='core_selector_basic_test.dart'></script>
   </head>
-  <body>
+  <body unresolved>
     <core-selector id='selector1'>
       <div>Item 1</div>
       <div>Item 2</div>
